work around broken crash recovery.
work around broken crash recovery. see https://github.com/itay-grudev/SingleApplication/issues/190 and 'https://invent.kde.org/network/kaidan/-/merge_requests/1297/diffs?commit_id=22b307f8302f9b24500cff9a1d9127db758fd28b'

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 
 [submodule "src/third-party/singleapplication"]
 	path = src/3rdparty/singleapplication
-	url = https://github.com/itay-grudev/SingleApplication.git
+	url = https://invent.kde.org/pillowtrucker/SingleApplication.git
 	ignore = dirty
 [submodule "src/third-party/qhotkey"]
 	path = src/3rdparty/qhotkey
